--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,26 @@
-# Logs
+.DS_Store
+node_modules
+/dist
+
+
+# Log files
 logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 lerna-debug.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
@@ -71,6 +87,10 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
+
+# local env files
+.env.local
+.env.*.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
